--- a/.github/workflows/prod_vitalhub.yml
+++ b/.github/workflows/prod_vitalhub.yml
@@ -31,11 +31,19 @@ jobs:
       
       - name: Install dependencies
         run: pip install -r requirements.txt
+      - name: Cleaning testing files
+        run: |
+          rm db.sqlite3
+          if [ -f .env ]; then rm .env; fi
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd vitalhub/
+          zip release.zip ./* -r
+          cd ..
+          mv vitalhub/release.zip .
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
