--- a/.github/workflows/prod_vitalhub.yml
+++ b/.github/workflows/prod_vitalhub.yml
@@ -33,7 +33,7 @@ jobs:
         run: pip install -r requirements.txt
       - name: Cleaning testing files
         run: |
-          rm db.sqlite3
+          rm -f db.sqlite3
           if [ -f .env ]; then rm .env; fi
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
