--- a/.github/workflows/prod_vitalhub.yml
+++ b/.github/workflows/prod_vitalhub.yml
@@ -30,7 +30,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r projeto-fds-django/requirements.txt
+        run: pip install -r requirements.txt
       - name: Cleaning testing files
         run: |
           rm -f db.sqlite3
