--- a/.github/workflows/prod_vitalhub.yml
+++ b/.github/workflows/prod_vitalhub.yml
@@ -30,11 +30,13 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r vitalhub/requirements.txt
       - name: Cleaning testing files
         run: |
+          cd vitalhub/
           rm -f db.sqlite3
           if [ -f .env ]; then rm .env; fi
+          cd ..
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
