--- a/.github/workflows/prod_vitalhub.yml
+++ b/.github/workflows/prod_vitalhub.yml
@@ -33,7 +33,7 @@ jobs:
         run: pip install -r requirements.txt
       - name: Cleaning testing files
         run: |
-          cd vitalhub/
+          cd projeto-fds-django/
           rm -f db.sqlite3
           if [ -f .env ]; then rm .env; fi
           cd ..
@@ -42,10 +42,10 @@ jobs:
 
       - name: Zip artifact for deployment
         run: |
-          cd vitalhub/
+          cd projeto-fds-django/
           zip release.zip ./* -r
           cd ..
-          mv vitalhub/release.zip .
+          mv projeto-fds-django/release.zip .
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
