--- a/.github/workflows/prod_vitalhub.yml
+++ b/.github/workflows/prod_vitalhub.yml
@@ -33,8 +33,8 @@ jobs:
         run: pip install -r requirements.txt
       - name: Cleaning testing files
         run: |
-          rm db.sqlite3
-          rm .env
+          rm -f db.sqlite3
+          rm -f .env
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
