--- a/.github/workflows/prod_vitalhub.yml
+++ b/.github/workflows/prod_vitalhub.yml
@@ -39,10 +39,9 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-      - name: Zip artifact for deployment
+      - name: Create deployment package
         run: |
-          zip release.zip ./* -r
-          mv release.zip .
+          zip -r release.zip . -x "venv/*" "*.sqlite3" "__pycache__/*" "*.env*" ".git/*"
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
