--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "O que é o VitalHub? É a plataforma digital que auxilia a gestão e comunicação dentro do ambiente hospitalar. Seu principal objetivo é facilitar a troca de informações essenciais entre todos os usuários do sistema, incluindo pacientes, médicos, enfermeiros e outros profissionais de saúde.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+        "cypress:open": "cypress open",
+        "cypress:run": "cypress run",
+        "test": "npm run cypress:run"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/r7fael/projeto-fds-django.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["django",
+    "cypress",
+    "vitalhub"],
+  "author": "Rafael",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/r7fael/projeto-fds-django/issues"
