--- a/.github/workflows/prod_vitalhub.yml
+++ b/.github/workflows/prod_vitalhub.yml
@@ -21,9 +21,7 @@ jobs:
           python-version: '3.11'
 
       - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
+        run: python -m venv venv
       
       - name: Install Python dependencies
         run: pip install -r requirements.txt
