--- a/.github/workflows/prod_vitalhub.yml
+++ b/.github/workflows/prod_vitalhub.yml
@@ -21,7 +21,10 @@ jobs:
           python-version: '3.11'
 
       - name: Create and start virtual environment
-        run: python -m venv venv
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          python -m pip install --upgrade pip
       
       - name: Install Python dependencies
         run: |
@@ -60,6 +63,7 @@ jobs:
       - name: Install Python dependencies for tests (Django, etc.)
         run: |
           source venv_test/bin/activate
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
       
       - name: Apply Django migrations (for a test DB)
